FIX -> tests and ADD -> tests for HandleIInputs with mock dependence and GSON dependence too, interfaces factory for test connexionUDP and a class for the test between server and admin each 2s (TODO)